--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Demo</title>
+    <title>EatGo-음식점을 알아보는 가장 쉬운 방법!</title>
   </head>
   <body>
     <div id="app"></div>
